<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/vHourly"
    android:background="@color/main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPic"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image"
            android:contentDescription="@string/none"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivPic"
            android:layout_toRightOf="@+id/ivPic"
            android:layout_toEndOf="@+id/ivPic"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:text="@string/unavailable"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDate"
            android:layout_toRightOf="@+id/ivPic"
            android:layout_toEndOf="@+id/ivPic"
            android:layout_marginLeft="16dp"
            android:id="@+id/relativeLayout">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp">

                <TextView
                    android:id="@+id/tvTempLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/main_light_1"
                    android:textStyle="bold"
                    android:text="@string/temperature"/>

                <TextView
                    android:id="@+id/tvDescriptionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/main_light_1"
                    android:textStyle="bold"
                    android:text="@string/description"/>

                <TextView
                    android:id="@+id/tvWindLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/main_light_1"
                    android:textStyle="bold"
                    android:text="@string/wind"/>

                <TextView
                    android:id="@+id/tvCloudsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_light_1"
                    android:textStyle="bold"
                    android:text="@string/cloudiness"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/linearLayout2"
                android:layout_toEndOf="@+id/linearLayout2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_light_2"
                    android:id="@+id/tvTemp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/unavailable"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_light_2"
                    android:id="@+id/tvDescription"
                    android:layout_marginBottom="4dp"
                    android:text="@string/unavailable"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_light_2"
                    android:id="@+id/tvWind"
                    android:layout_marginBottom="4dp"
                    android:text="@string/unavailable"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_light_2"
                    android:id="@+id/tvClouds"
                    android:text="@string/unavailable"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <GridView
        android:id="@+id/gvHourly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:numColumns="8"/>

</LinearLayout>
